--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/check": "^0.5.4",
-        "@astrojs/react": "^3.0.10",
-        "@astrojs/tailwind": "^5.1.0",
+        "@astrojs/check": "^0.9.5",
+        "@astrojs/react": "^4.4.2",
+        "@astrojs/tailwind": "^6.0.2",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
-        "astro": "^4.3.6",
+        "astro": "^5.15.5",
         "gsap": "^3.12.5",
         "lil-gui": "^0.19.1",
         "react": "^18.2.0",
@@ -26,6 +26,8 @@
     },
     "devDependencies": {
         "@types/node": "^20.11.17",
-        "@types/three": "^0.161.2"
+        "@types/three": "^0.161.2",
+        "eslint": "^9.39.1",
+        "eslint-plugin-astro": "^1.5.0"
     }
 }
